Added very hardcoded avatar upload system

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Locally generated databases
 *.db
 
+# User data files
+app/static/user_data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
